# humanparsing-onnx

./: main.py  pyproject.toml  readme.md
src/network/: atr.py  base.py  lip.py  pipeline.py
src/utils/: loader.py
