[project]
name = "humanparsing-onnx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=0.30.2",
    "onnxruntime-gpu>=1.21.0",
    "opencv-python>=4.11.0.86",
    "pillow>=11.1.0",
    "ruff>=0.11.5",
]
